welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:18: error: ')' expected but ';' found.
      else(droite();avance();droite();)
                   ^SnakeBuggle:18: error: illegal start of statement
      else(droite();avance();droite();)
                                      ^